--- a/client/client.jade
+++ b/client/client.jade
@@ -8,6 +8,8 @@ head
     meta(name="theme-color" content="black")
     link(href="https://fonts.googleapis.com/css?family=Ubuntu:300,400&display=swap" rel="stylesheet")
     link(href="https://fonts.googleapis.com/css?family=Roboto:300,400&display=swap" rel="stylesheet")
+    link(href="https://fonts.googleapis.com/css?family=Raleway:300,400&display=swap" rel="stylesheet")
+    link(href="https://fonts.googleapis.com/css?family=Montserrat:300,400&display=swap" rel="stylesheet")
     //- script(src="https://cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.min.js")
     //- script(src="https://semantic-ui.com/javascript/library/tablesort.js")
 
