--- a/client/nav.jade
+++ b/client/nav.jade
@@ -6,7 +6,7 @@ template(name='nav')
         if connected
             a.icon.item.home2(href='/')
                 i.big.yin.yang.icon
-            a.icon.item(href='/stack' data-tab='groups')
+            a.icon.item.home2(href='/stack' data-tab='groups')
                 i.large.stack.fire.icon
             a.icon.item.users(href='/users')
                 i.large.users.icon
