--- a/client/s.css
+++ b/client/s.css
@@ -359,9 +359,9 @@ a.goto_article {
     cursor: pointer !important;
     /* color: black !important; */
     /* font-size: 130% !important; */
-    zoom: 105% !important;
+    /*zoom: 105% !important;*/
     /* padding-top: 5em !important; */
-    transform: scale(1.) !important;
+    /*transform: scale(1.) !important;*/
     z-index: 1000 !important;
     /*text-shadow: 0 20px 20px 20px rgba(50, 50, 100, 0.1) !important; */
     /*text-shadow: 0 0 3px grey !important;*/
@@ -369,9 +369,9 @@ a.goto_article {
 }
 
 .zoomer:hover {
-    transition: all .25s ease !important; 
+    transition: all .1s ease !important; 
     z-index: 1000 !important;
-    transform: scale(.95) !important;
+    transform: scale(1.1) !important;
 }
 /*img.zoomer:hover {*/
 /*    transition: all .2s ease !important; */
@@ -379,10 +379,10 @@ a.goto_article {
 /*    transform: scale(1.2) !important;*/
 /*}*/
 .superzoom:hover {
-    transition: all .3s ease !important; 
-    transform: scale(3) !important;
+    transition: all .25s ease !important; 
+    transform: scale(5) !important;
     z-index:1000 !important;
-    border-radius: 10px !important;
+    border-radius: 7px !important;
     animation: fadein .5s !important;
     /*-webkit-transition: opacity .25s ease-in !important;*/
     /* -webkit-transition: opacity .25s ease-out; */
