--- a/client/nav.jade
+++ b/client/nav.jade
@@ -4,10 +4,10 @@ template(name='nav')
         // a.icon.header.item.pointer.toggle_leftbar
         //     i.bars.large.grey.icon
         if connected
-            a.icon.item.home2(href='/')
-                i.big.yin.yang.icon
+            a.icon.item.home2(href='/reddit')
+                i.big.reddit.icon
             a.icon.item.home2(href='/stack' data-tab='groups')
-                i.large.stack.fire.icon
+                i.large.stack.exchange.icon
             a.icon.item.users(href='/users')
                 i.large.users.icon
             a.icon.item.tags(href='/tags')
