--- a/client/reddit.jade
+++ b/client/reddit.jade
@@ -27,20 +27,20 @@ template(name='reddit')
                 //     |emotion
                 // .spacer
             .four.wide.right.aligned.column.scrolling
-                .ui.large.basic.label(title='results') #{doc_count} results
-                .ui.basic.circular.button(title='when')
-                i.clock.icon
-                +i n='clock' cl='ui mini inline image'
-                |when
-                .ui.basic.button(title='where')
-                    i.marker.icon
-                div
-                .ui.inline.header 
-                    +i n='reddit' cl='ui mini inline image'
-                    |subreddit
-                each subreddit_results
-                    +tag_selector
-                    .ui.compact.small.tertiary.add_tag.button #{name}
+                // .ui.large.basic.label(title='results') #{doc_count} results
+                // .ui.basic.circular.button(title='when')
+                // i.clock.icon
+                // +i n='clock' cl='ui mini inline image'
+                // |when
+                // .ui.basic.button(title='where')
+                    // i.marker.icon
+                // div
+                // .ui.inline.header 
+                //     +i n='reddit' cl='ui mini inline image'
+                //     |subreddit
+                // each subreddit_results
+                //     +tag_selector
+                    // .ui.compact.small.tertiary.add_tag.button #{name}
                 +skve k='view_mode' v='posts' l='posts' i='blog'
                 +skve k='view_mode' v='wikipedia' l='wikipedia' i='wikipedia'
                 // +skve k='view_mode' v='stack' l='stack' i='stackoverflow'
